--- a/app/views/consultations/show.html.erb
+++ b/app/views/consultations/show.html.erb
@@ -16,11 +16,14 @@
     </div>
   </div>
   <div class="bg-white shadow overflow-hidiven  rounded-lg mt-2 ">
+    <div class="flex items-end px-4 py-1 justify-end">
+      <%= link_to '+ Add new', copy_consultation_path(@consultation), class: 'mt-2 inline-flex text-bold items-center px-4 py-2 rounded-md text-sm font-medium  shadow leading-5 bg-white rounded text-gray-800' %>
+    </div>
     <div class="px-4 py-5 border-b border-gray-200 flex flex-col items-between justify-center  lg:flex-row lg:items-center lg:justify-between sm:px-6">
       <div class="w-full">
         <div class="flex md:flex-row flex-col justify-between">
           <div>
-            <div class="mt-4 text-3xl font-semibold">
+            <div class="text-3xl font-semibold">
               #EKM <%= @contact.id %>
             </div>
             <div class="text-lg text-2xl font-medium text-gray-900">
