--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -4,104 +4,64 @@
   <title><%= presenter.page_title %></title>
 <% end %>
 
-<% if current_user.is_admin? %>
-  <section>
-    <h1 class="text-xl font-bold">Generate Reports</h1>
 
-    <div class="flex">
-        <span class="mt-2 inline-flex rounded-md shadow-sm">
-            <%= link_to 'Download Full Report', contacts_path(format: :csv), class: 'inline-flex items-center px-4 py-2 border border-transparent text-sm leading-5 font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-500 focus:outline-none focus:border-indigo-700 focus:shadow-outline-indigo active:bg-indigo-700 transition ease-in-out duration-150' %>
-        </span>
-    </div>
+<section>
+  <!--    <h1 class="text-xl font-bold">Generate Reports</h1>-->
 
-    <div class="mt-6 flex">
-      <%= link_to 'Non Medical Needs Report', generate_non_medical_reqs_contacts_path(format: :csv), class: 'inline-flex items-center px-4 py-2 border border-transparent text-sm leading-5 font-medium rounded-md text-indigo-700 bg-indigo-100 hover:bg-indigo-50 focus:outline-none focus:border-indigo-300 focus:shadow-outline-indigo active:bg-indigo-200 transition ease-in-out duration-150' %>
-      <%= link_to 'Medical Needs Report', generate_medical_reqs_contacts_path(format: :csv), class: 'ml-4 inline-flex items-center px-4 py-2 border border-transparent text-sm leading-5 font-medium rounded-md text-indigo-700 bg-indigo-100 hover:bg-indigo-50 focus:outline-none focus:border-indigo-300 focus:shadow-outline-indigo active:bg-indigo-200 transition ease-in-out duration-150' %>
-    </div>
-    <div class="mt-8">
-      <h3 class="font-bold text-xl">Dashboard</h3>
-      <div class="mt-5 grid grid-cols-1 gap-5 sm:grid-cols-3">
-        <div class="bg-white overflow-hidden shadow rounded-lg">
-          <div class="px-4 py-5 sm:p-6">
-            <dl>
-              <dt class="text-sm leading-5 font-medium text-gray-500 truncate">
-                Total Requests
-              </dt>
-              <dd class="mt-1 text-3xl leading-9 font-semibold text-gray-900">
-                <%= @non_medical_count + @medical_count %>
-              </dd>
-            </dl>
-          </div>
+  <!--    <div class="flex">-->
+  <!--        <span class="mt-2 inline-flex rounded-md shadow-sm">-->
+  <%#= link_to 'Download Full Report', contacts_path(format: :csv), class: 'inline-flex items-center px-4 py-2 border border-transparent text-sm leading-5 font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-500 focus:outline-none focus:border-indigo-700 focus:shadow-outline-indigo active:bg-indigo-700 transition ease-in-out duration-150' %>
+  <!--        </span>-->
+  <!--    </div>-->
+
+  <!--    <div class="mt-6 flex">-->
+  <%#= link_to 'Non Medical Needs Report', generate_non_medical_reqs_contacts_path(format: :csv), class: 'inline-flex items-center px-4 py-2 border border-transparent text-sm leading-5 font-medium rounded-md text-indigo-700 bg-indigo-100 hover:bg-indigo-50 focus:outline-none focus:border-indigo-300 focus:shadow-outline-indigo active:bg-indigo-200 transition ease-in-out duration-150' %>
+  <%#= link_to 'Medical Needs Report', generate_medical_reqs_contacts_path(format: :csv), class: 'ml-4 inline-flex items-center px-4 py-2 border border-transparent text-sm leading-5 font-medium rounded-md text-indigo-700 bg-indigo-100 hover:bg-indigo-50 focus:outline-none focus:border-indigo-300 focus:shadow-outline-indigo active:bg-indigo-200 transition ease-in-out duration-150' %>
+  <!--    </div>-->
+  <div class="mt-8">
+    <h3 class="font-bold text-xl">Dashboard</h3>
+    <div class="mt-5 grid grid-cols-1 gap-5 sm:grid-cols-3">
+      <div class="bg-white overflow-hidden shadow rounded-lg">
+        <div class="px-4 py-5 sm:p-6">
+          <dl>
+            <dt class="text-sm leading-5 font-medium text-gray-500 truncate">
+              Total Consultations Requests
+            </dt>
+            <dd class="mt-1 text-3xl leading-9 font-semibold text-gray-900">
+              <%= presenter.consultations.count %>
+            </dd>
+          </dl>
         </div>
-        <div class="bg-white overflow-hidden shadow rounded-lg">
-          <div class="px-4 py-5 sm:p-6">
-            <dl>
-              <dt class="text-sm leading-5 font-medium text-gray-500 truncate">
-                Non Medical Requests
-              </dt>
-              <dd class="mt-1 text-3xl leading-9 font-semibold text-gray-900">
-                <%= @non_medical_count %>
-              </dd>
-            </dl>
-          </div>
+      </div>
+      <div class="bg-white overflow-hidden shadow rounded-lg">
+        <div class="px-4 py-5 sm:p-6">
+          <dl>
+            <dt class="text-sm leading-5 font-medium text-gray-500 truncate">
+              Total Patients
+            </dt>
+            <dd class="mt-1 text-3xl leading-9 font-semibold text-gray-900">
+              <%= presenter.consultations.pluck(:contact_id).uniq.count %>
+            </dd>
+          </dl>
         </div>
-        <div class="bg-white overflow-hidden shadow rounded-lg">
-          <div class="px-4 py-5 sm:p-6">
-            <dl>
-              <dt class="text-sm leading-5 font-medium text-gray-500 truncate">
-                Medical Requests
-              </dt>
-              <dd class="mt-1 text-3xl leading-9 font-semibold text-gray-900">
-                <%= @medical_count %>
-              </dd>
-            </dl>
-          </div>
+      </div>
+      <div class="bg-white overflow-hidden shadow rounded-lg">
+        <div class="px-4 py-5 sm:p-6">
+          <dl>
+            <dt class="text-sm leading-5 font-medium text-gray-500 truncate">
+              Follow-ups
+            </dt>
+            <dd class="mt-1 text-3xl leading-9 font-semibold text-gray-900">
+              <%= presenter.consultations.count - presenter.consultations.pluck(:contact_id).uniq.count %>
+            </dd>
+          </dl>
         </div>
       </div>
     </div>
-    <div class="mt-2">
-      <div class="mt-3 grid grid-cols-1 gap-5 sm:grid-cols-3">
-        <div class="bg-white overflow-hidden shadow rounded-lg">
-          <div class="px-4 py-5 sm:p-6">
-            <dl>
-              <dt class="text-sm leading-5 font-medium text-gray-500 truncate">
-                Remaining Requests
-              </dt>
-              <dd class="mt-1 text-3xl leading-9 font-semibold text-gray-900">
-                <%= @non_medical_count_remaining + @medical_count_remaining %>
-              </dd>
-            </dl>
-          </div>
-        </div>
-        <div class="bg-white overflow-hidden shadow rounded-lg">
-          <div class="px-4 py-5 sm:p-6">
-            <dl>
-              <dt class="text-sm leading-5 font-medium text-gray-500 truncate">
-                Remaining Non Medical Requests
-              </dt>
-              <dd class="mt-1 text-3xl leading-9 font-semibold text-gray-900">
-                <%= @non_medical_count_remaining %>
-              </dd>
-            </dl>
-          </div>
-        </div>
-        <div class="bg-white overflow-hidden shadow rounded-lg">
-          <div class="px-4 py-5 sm:p-6">
-            <dl>
-              <dt class="text-sm leading-5 font-medium text-gray-500 truncate">
-                Remaining Medical Requests
-              </dt>
-              <dd class="mt-1 text-3xl leading-9 font-semibold text-gray-900">
-                <%= @medical_count_remaining %>
-              </dd>
-            </dl>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-<% end %>
-<div>
+  </div>
+</section>
+
+<div class="mt-4">
   <%= simple_form_for :search, url: root_path, method: "GET" do |f| %>
 
     <div class="flex">
@@ -109,12 +69,11 @@
       <%= f.input :end_date, label: 'To', class: 'flex', html5: true, input_html: { class: 'flex form-select mr-4', value: presenter.end_date.to_s }, as: :date, default: Date.today, required: false %>
     </div>
     <div class="flex mt-4 flex-col md:flex-row">
-      <%= f.input :actions, label: 'Actions', input_html: { class: 'flex form-select mr-4' }, collection: Action.all, required: false %>
+      <%= f.input :actions, label: 'Status', input_html: { class: 'flex form-select mr-4' }, collection: Action.all, required: false %>
       <%= f.input :category, label: 'Category', input_html: { class: 'flex form-select mr-4' }, collection: Consultation.categories.keys.map { |a| [a.titleize, a] }, required: false %>
       <%= f.input :test_status, label: 'Test Status', input_html: { class: 'flex form-select mr-4' }, collection: Consultation.test_statuses, required: false %>
       <%= f.input :current_status, label: 'Status Category', input_html: { class: 'flex form-select mr-4' }, collection: Consultation.current_statuses, required: false %>
-      <%= f.input :status, label: 'Status', input_html: { class: 'flex form-select mr-4' }, collection: Consultation.statuses, required: false %>
-      <%= f.input :others, label: '', input_html: { class: 'flex form-select mr-4' }, collection: ['ANC', 'Shifted To Hospital', 'Prescription Given'], required: false %>
+      <%= f.input :others, label: '', input_html: { class: 'flex form-select mr-4' }, collection: ['ANC', 'Shifted To Hospital', 'Prescription Given', 'Quarantined'], required: false %>
     </div>
     <%= f.submit "Search", class: "cursor-pointer rounded shadow inline-block px-2 py-1 bg-indigo-700 text-white mt-4" %>
 
@@ -153,86 +112,93 @@
     <% end %>
   </div>
 <% end %>
-<% if current_user.panchayat_admin? or current_user.phone_caller? %>
-  <% if presenter.consultations.blank? %>
-    <div class="mt-4 text-xl font-semibold px-4 py-6 bg-white shadow rounded">
-      Noting to show, Please try changing the filters
-    </div>
-  <% else %>
+
+<% if presenter.consultations.blank? %>
+  <div class="mt-4 text-xl font-semibold px-4 py-6 bg-white shadow rounded">
+    Noting to show, Please try changing the filters
+  </div>
+<% else %>
+  <div class="flex">
     <div class="font-semibold mt-4 text-3xl">
       Consultations today
     </div>
-    <div class="mt-4 flex flex-col">
-      <div class="-my-2 py-2 overflow-x-auto sm:-mx-6 sm:px-6 lg:-mx-8 lg:px-8">
-        <div class="align-middle inline-block min-w-full shadow overflow-hidden sm:rounded-lg border-b border-gray-200">
-          <table class="min-w-full">
-            <thead>
-            <tr>
-              <th class="px-6 py-3 border-b border-gray-200 bg-gray-50 text-center text-xs leading-4 font-medium text-gray-500 uppercase tracking-wider">
-                ID
-              </th>
-              <th class="px-6 py-3 border-b border-gray-200 bg-gray-50 text-center text-xs leading-4 font-medium text-gray-500 uppercase tracking-wider">
-                Name
-              </th>
-              <th class="px-6 py-3 border-b border-gray-200 bg-gray-50 text-center text-xs leading-4 font-medium text-gray-500 uppercase tracking-wider">
-                Consultation
-              </th>
-              <th class="px-6 py-3 border-b border-gray-200 bg-gray-50 text-center text-xs leading-4 font-medium text-gray-500 uppercase tracking-wider">
-                Requested
-              </th>
-              <th class="px-6 py-3 border-b border-gray-200 bg-gray-50 text-center text-xs leading-4 font-medium text-gray-500 uppercase tracking-wider">
-                Category
-              </th>
-              <th class="px-6 py-3 border-b border-gray-200 bg-gray-50 text-center text-xs leading-4 font-medium text-gray-500 uppercase tracking-wider">
-                Status
-              </th>
+  </div>
+  <div class="mt-4 flex flex-col">
+    <div class="-my-2 py-2 overflow-x-auto sm:-mx-6 sm:px-6 lg:-mx-8 lg:px-8">
+      <div class="align-middle inline-block min-w-full shadow overflow-hidden sm:rounded-lg border-b border-gray-200">
+        <table class="min-w-full">
+          <thead>
+          <tr>
+            <th class="px-6 py-3 border-b border-gray-200 bg-gray-50 text-center text-xs leading-4 font-medium text-gray-500 uppercase tracking-wider">
+              ID
+            </th>
+            <th class="px-6 py-3 border-b border-gray-200 bg-gray-50 text-center text-xs leading-4 font-medium text-gray-500 uppercase tracking-wider">
+              Name
+            </th>
+            <th class="px-6 py-3 border-b border-gray-200 bg-gray-50 text-center text-xs leading-4 font-medium text-gray-500 uppercase tracking-wider">
+              Consultation
+            </th>
+            <th class="px-6 py-3 border-b border-gray-200 bg-gray-50 text-center text-xs leading-4 font-medium text-gray-500 uppercase tracking-wider">
+              Requested
+            </th>
+            <th class="px-6 py-3 border-b border-gray-200 bg-gray-50 text-center text-xs leading-4 font-medium text-gray-500 uppercase tracking-wider">
+              Category
+            </th>
+            <th class="px-6 py-3 border-b border-gray-200 bg-gray-50 text-center text-xs leading-4 font-medium text-gray-500 uppercase tracking-wider">
+              Status
+            </th>
+            <% if current_user.is_admin? %>
               <th class="px-6 py-3 border-b border-gray-200 bg-gray-50 text-center text-xs leading-4 font-medium text-gray-500 uppercase tracking-wider">
                 view
               </th>
-            </tr>
-            </thead>
-            <tbody class="bg-white">
-            <% presenter.consultations.each do |c| %>
-              <tr class="hover:text-gray-100 cursor-pointer">
-                <td class="px-6 py-4 whitespace-no-wrap border-b border-gray-200 text-sm leading-5 font-medium text-gray-900">
-                  <%= link_to "EKM#{c.contact.id}", consultation_path(c) %>
-                </td>
-                <td class="px-6 py-4 whitespace-no-wrap text-center border-b border-gray-200 text-sm leading-5 text-gray-500 text-blue-600">
-                  <%= link_to c.contact.name, contact_path(c.contact), class: 'mr-2 font-medium' %>
-                </td>
-                <td class="px-6 py-4 whitespace-no-wrap text-center border-b border-gray-200 text-sm leading-5 text-gray-500">
-                  <%= c.consultation_type %>
-                </td>
-                <td class="px-6 py-4 whitespace-no-wrap text-center border-b border-gray-200 text-sm leading-5 text-gray-500">
-                  <%= time_ago_in_words(c.created_at) %> ago
-                </td>
-                <td class="px-6 py-4 whitespace-no-wrap text-center border-b border-gray-200 text-sm leading-5 text-gray-500">
-                  <%= c.category&.titleize %>
-                </td>
-                <td class="px-6 py-4 whitespace-no-wrap text-center border-b border-gray-200 text-sm leading-5 text-gray-500">
-                  <div class="flex flex-col items-start">
-                    <div class="<%= "bg-#{c.action&.color}-200 inline-flex mx-auto px-2 rounded font-semibold mt-2" %>">
-                      <%= c.action&.name %>
-                    </div>
+            <% end %>
+          </tr>
+          </thead>
+          <tbody class="bg-white">
+          <% presenter.consultations.each do |c| %>
+            <tr class="hover:text-gray-100 cursor-pointer">
+              <td class="px-6 py-4 whitespace-no-wrap border-b border-gray-200 text-sm leading-5 font-medium text-gray-900">
+                <%= link_to "EKM#{c.contact.id}", consultation_path(c) %>
+              </td>
+              <td class="px-6 py-4 whitespace-no-wrap text-center border-b border-gray-200 text-sm leading-5 text-gray-500 text-blue-600">
+                <%= link_to c.contact.name, contact_path(c.contact), class: 'mr-2 font-medium' %>
+              </td>
+              <td class="px-6 py-4 whitespace-no-wrap text-center border-b border-gray-200 text-sm leading-5 text-gray-500">
+                <%= c.consultation_type %>
+              </td>
+              <td class="px-6 py-4 whitespace-no-wrap text-center border-b border-gray-200 text-sm leading-5 text-gray-500">
+                <%= time_ago_in_words(c.created_at) %> ago
+              </td>
+              <td class="px-6 py-4 whitespace-no-wrap text-center border-b border-gray-200 text-sm leading-5 text-gray-500">
+                <%= c.category&.titleize %>
+              </td>
+              <td class="px-6 py-4 whitespace-no-wrap text-center border-b border-gray-200 text-sm leading-5 text-gray-500">
+                <div class="flex flex-col items-start">
+                  <div class="<%= "bg-#{c.action&.color}-200 inline-flex mx-auto px-2 rounded font-semibold mt-2" %>">
+                    <%= c.action&.name %>
+                  </div>
+                  <% unless c.action&.name == "Pending" %>
                     <div class="text-sm mt-2">
                       added <%= time_ago_in_words(c.updated_at) %> ago
                     </div>
-                  </div>
-                </td>
+                  <% end %>
+                </div>
+              </td>
+              <% if current_user.is_admin? %>
                 <td class="px-6 py-4 whitespace-no-wrap text-center border-b border-gray-200 text-sm leading-5 text-gray-500">
                 <span>
                   <%= link_to 'View', consultation_path(c), class: 'mr-2 font-medium' %>
                 </span>
                 </td>
-              </tr>
-            <% end %>
-            </tbody>
-          </table>
-        </div>
-      </div>
-      <!--      hack to get colors-->
-      <div class="bg-gray-200 bg-red-200 bg-orange-200 bg-yellow-200 bg-green-200 bg-teal-200 bg-blue-200 bg-indigo-200 bg-purple-200 bg-pink-200">
+              <% end %>
+            </tr>
+          <% end %>
+          </tbody>
+        </table>
       </div>
     </div>
-  <% end %>
+    <!--      hack to get colors-->
+    <div class="bg-gray-200 bg-red-200 bg-orange-200 bg-yellow-200 bg-green-200 bg-teal-200 bg-blue-200 bg-indigo-200 bg-purple-200 bg-pink-200">
+    </div>
+  </div>
 <% end %>
