--- a/app/views/contacts/show.html.erb
+++ b/app/views/contacts/show.html.erb
@@ -12,11 +12,11 @@
         Information regarding the Contact.
       </p>
     </div>
-    <% if not current_user.panchayat_admin? %>
-      <div class="mt-3 lg:mt-0">
-        <%= link_to 'Edit Contact', edit_contact_path(@contact), class: 'inline-flex items-center px-3 py-2 rounded-md text-sm font-medium leading-5 bg-gray-100 text-gray-800' %>
-      </div>
-    <% end %>
+
+    <div class="mt-3 lg:mt-0">
+      <%= link_to 'Edit Contact', edit_contact_path(@contact), class: 'inline-flex items-center px-3 py-2 rounded-md text-sm font-medium leading-5 bg-gray-100 text-gray-800' %>
+    </div>
+    
   </div>
   <div class="px-4 py-5 sm:p-0">
     <dl>
@@ -203,11 +203,11 @@
 <div class="mt-4 text-5xl font-semibold border-b-2 ">Consultation History</div>
 <div class="mt-4 flex flex-wrap">
   <%= render 'consultations/create_form' %>
-  <% @contact.consultations.where.not(id: nil).map do |consultation| %>
+  <% @contact.consultations.where.not(id: nil).order(:created_at).reverse.map do |consultation| %>
     <div class="md:w-1/3 w-full p-2">
       <div class="bg-white shadow overflow-hidden  sm:rounded-lg mt-4 p-4 h-full">
         <div class="mt-4 text-3xl font-semibold">
-          <%= consultation.status.titleize %>
+          <%= consultation.action&.name %>
         </div>
         <div class="mb-2">
           Requested <%= time_ago_in_words(consultation.created_at) %> ago
@@ -228,7 +228,7 @@
             <%= consultation.source %>
           </dd>
         </div>
-        <% if consultation.doctor_id.blank? %>
+        <% if consultation.doctor_id.blank? && current_user.is_admin? %>
           <%= render 'consultations/assign_form', consultation: consultation %>
         <% else %>
           <div class="mt-8 sm:mt-0 sm:grid sm:grid-cols-3 sm:gap-4 sm:border-t sm:border-gray-200 sm:py-5">
@@ -236,12 +236,14 @@
               Assigned to
             </dt>
             <dd class="mt-1 text-sm leading-5 text-gray-900 sm:mt-0 sm:col-span-2">
-              <%= consultation.doctor.name %>
+              <%= consultation.doctor&.name %>
             </dd>
           </div>
-          <div>
-            <%= link_to 'View Details', consultation_path(consultation), class: 'hover:text-white hover:bg-gray-600 inline-flex items-center px-3 py-2 rounded-md text-sm font-medium leading-5 bg-gray-100 text-gray-800' %>
-          </div>
+          <% if current_user.is_admin? %>
+            <div>
+              <%= link_to 'View Details', consultation_path(consultation), class: 'hover:text-white hover:bg-gray-600 inline-flex items-center px-3 py-2 rounded-md text-sm font-medium leading-5 bg-gray-100 text-gray-800' %>
+            </div>
+          <% end %>
         <% end %>
       </div>
     </div>
