--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,8 +24,8 @@
       <% end %>
 
       <div class="flex flex-col items-start md:items-center md:flex-row">
-        <% if user_signed_in? and (not current_user.panchayat_admin?) %>
-          <div class="mt-3 lg:mt-0">
+        <% if user_signed_in? %>
+          <div class="mt-3 md:mt-0">
             <%= simple_form_for :search, url: find_phone_path, method: "GET" do |f| %>
               <div class="flex md:flex-row flex-col">
                 <%= f.input :phone_number, autofocus: true, label: false, placeholder: 'Enter Phone Number', input_html: { class: 'form-input py-2 text-sm' } %>
@@ -34,7 +34,7 @@
             <% end %>
           </div>
         <% end %>
-        <div class="mt-4 lg:mt-0 lg:ml-6">
+        <div class="mt-4 md:mt-0 md:ml-6 flex items-center">
           <% if current_user.try(:admin?) or current_user.try(:district_admin?) %>
             <%= link_to 'Create new User', new_user_registration_path, class: 'inline-flex items-center px-3 py-2 rounded-md text-sm font-medium leading-5 bg-indigo-100 text-indigo-800' %>
           <% end %>
@@ -61,7 +61,7 @@
     </div>
   <% end %>
 
-  <main class="p-4 lg:p-6 py-10 max-w-5xl mx-auto">
+  <main class="p-4 md:p-6 py-10 max-w-5xl mx-auto">
     <%= yield %>
   </main>
   <div class="mx-auto mt-4 block md:hidden py-4">
