--- a/app/views/contacts/show.html.erb
+++ b/app/views/contacts/show.html.erb
@@ -16,7 +16,7 @@
     <div class="mt-3 lg:mt-0">
       <%= link_to 'Edit Contact', edit_contact_path(@contact), class: 'inline-flex items-center px-3 py-2 rounded-md text-sm font-medium leading-5 bg-gray-100 text-gray-800' %>
     </div>
-    
+
   </div>
   <div class="px-4 py-5 sm:p-0">
     <dl>
@@ -92,6 +92,16 @@
             <li class="my-2">
               <span class="font-bold">Mobile health worker: </span><%= @contact.number_health_worker %></span></li>
           </ul>
+        </dd>
+      </div>
+
+      <div class="mt-8 sm:mt-0 sm:grid sm:grid-cols-3 sm:gap-4 sm:border-t sm:border-gray-200 sm:px-6 sm:py-5">
+        <dt class="text-sm leading-5 font-medium text-gray-500">
+          Notes
+        </dt>
+        <dd class="mt-1 text-sm leading-5 text-gray-900 sm:mt-0 sm:col-span-2">
+          <span><%= @contact.description %></span>
+
         </dd>
       </div>
       <!--      <div class="mt-8 sm:mt-0 sm:grid sm:grid-cols-3 sm:gap-4 sm:border-t sm:border-gray-200 sm:px-6 sm:py-5 hidden">-->
