--- a/app/views/contacts/show.html.erb
+++ b/app/views/contacts/show.html.erb
@@ -94,14 +94,21 @@
           </ul>
         </dd>
       </div>
+      <div class="mt-8 sm:mt-0 sm:grid sm:grid-cols-3 sm:gap-4 sm:border-t sm:border-gray-200 sm:px-6 sm:py-5">
+        <dt class="text-sm leading-5 font-medium text-gray-500">
+          Old Number
+        </dt>
+        <dd class="mt-1 text-sm leading-5 text-gray-900 sm:mt-0 sm:col-span-2">
+          <span><%= @contact.old_case_id %></span>
 
+        </dd>
+      </div>
       <div class="mt-8 sm:mt-0 sm:grid sm:grid-cols-3 sm:gap-4 sm:border-t sm:border-gray-200 sm:px-6 sm:py-5">
         <dt class="text-sm leading-5 font-medium text-gray-500">
           Notes
         </dt>
         <dd class="mt-1 text-sm leading-5 text-gray-900 sm:mt-0 sm:col-span-2">
-          <span><%= @contact.description %></span>
-
+          <span><%= simple_format(@contact.description) %></span>
         </dd>
       </div>
       <!--      <div class="mt-8 sm:mt-0 sm:grid sm:grid-cols-3 sm:gap-4 sm:border-t sm:border-gray-200 sm:px-6 sm:py-5 hidden">-->
@@ -221,6 +228,9 @@
         </div>
         <div class="mb-2">
           Requested <%= time_ago_in_words(consultation.created_at) %> ago
+        </div>
+        <div class="mb-2 text-xs">
+          (<%= consultation.created_at.strftime("%m/%d/%Y at %I:%M%p") %>)
         </div>
         <div class="mt-8 sm:mt-0 sm:grid sm:grid-cols-3 sm:gap-4 sm:border-t sm:border-gray-200 sm:py-5">
           <dt class="text-sm leading-5 font-medium text-gray-500">
