--- a/app/views/consultations/_create_form.html.erb
+++ b/app/views/consultations/_create_form.html.erb
@@ -1,7 +1,10 @@
 <div class="md:w-1/3 w-full p-2">
   <div class="bg-white shadow overflow-hidden  sm:rounded-lg mt-4 p-4 h-full">
     <div class="mt-4 text-3xl font-semibold">
-      Create New Request
+      Create Re-Request
+    </div>
+    <div class="mt-2 bg-yellow-500 font-semibold px-2 py-1">
+      Not for new registration
     </div>
     <%= simple_form_for [@contact, @contact.consultations.build], defaults: { input_html: { class: 'form-input mt-1' }, wrapper_html: { class: 'flex flex-col my-2' } } do |f| %>
       <%= f.input :consultation_type, input_html: { class: 'form-select' }, required: true, label: 'Choose a consultation type ' %>
