--- a/app/views/contacts/summary.html.erb
+++ b/app/views/contacts/summary.html.erb
@@ -247,6 +247,11 @@
                     </div>
                   <% end %>
                 </div>
+                <% if c.over_due %>
+                  <div class="px-4 py-1 bg-red-600 text-white w-full font-semibold">
+                    Missed
+                  </div>
+                <% end %>
               </td>
               <% if current_user.is_admin? %>
                 <td class="px-6 py-4 whitespace-no-wrap text-center border-b border-gray-200 text-sm leading-5 text-gray-500">
