--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -174,6 +174,7 @@
               <td class="px-6 py-4 whitespace-no-wrap text-center border-b border-gray-200 text-sm leading-5 text-gray-500">
                 <div><%= c&.source&.titleize %></div>
                 <div><%= time_ago_in_words(c.created_at) %> ago</div>
+                <div class="text-sm"><%= c.created_at.strftime("%m/%d/%Y at %I:%M%p") %></div>
               </td>
               <td class="px-6 py-4 whitespace-no-wrap text-center border-b border-gray-200 text-sm leading-5 text-gray-500">
                 <%= c.category&.titleize %>
