--- a/app/views/consultations/show.html.erb
+++ b/app/views/consultations/show.html.erb
@@ -111,7 +111,7 @@
             <li class="my-2"><span class="font-bold">Status:</span> <span><%= @consultation.current_status %></span>
             </li>
             <li class="my-2">
-              <span class="font-bold">Category: </span><span class="font-semibold"><%= @consultation.category.titleize %></span>
+              <span class="font-bold">Category: </span><span class="font-semibold"><%= @consultation&.category&.titleize %></span>
             </li>
             <li class="my-2">
               <span class="font-bold">Antenatal: </span><span><%= @consultation.antenatal ? "Yes" : "No" %></span></li>
